k8s/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: petbro
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
